staff members extracted to directive

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/directives/scaffold.js"></script>
     <script src="scripts/directives/acknowledgments.js"></script>
+    <script src="scripts/directives/staffMember.js"></script>
     <!-- endbuild -->
 </body>
 </html>
