--- a/app/index.html
+++ b/app/index.html
@@ -50,13 +50,27 @@
     </script>
 
     <!-- build:js({.tmp,app}) scripts/libs.js -->
+    <script src="bower_components/jquery/jquery.js"></script>
+    <!-- masonry -->
+    <script src="bower_components/jquery-bridget/jquery.bridget.js"></script>
+    <script src="bower_components/get-style-property/get-style-property.js"></script>
+    <script src="bower_components/get-size/get-size.js"></script>
+    <script src="bower_components/eventEmitter/EventEmitter.js"></script>
+    <script src="bower_components/eventie/eventie.js"></script>
+    <script src="bower_components/doc-ready/doc-ready.js"></script>
+    <script src="bower_components/matches-selector/matches-selector.js"></script>
+    <script src="bower_components/outlayer/item.js"></script>
+    <script src="bower_components/outlayer/outlayer.js"></script>
+    <script src="bower_components/masonry/masonry.js"></script>
+    <script src="bower_components/imagesloaded/imagesloaded.js"></script>
+    <!-- masonry end -->
     <script src="bower_components/angular/angular.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/plugins.js -->
-    <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/revolunet-angular-carousel/dist/angular-carousel.js"></script>
+    <script src="bower_components/angular-masonry/angular-masonry.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/modules.js -->
@@ -70,6 +84,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/staff.js"></script>
     <script src="scripts/directives/scaffold.js"></script>
     <script src="scripts/directives/acknowledgments.js"></script>
     <script src="scripts/directives/staffMember.js"></script>
