--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
     <script src="scripts/directives/scaffold.js"></script>
     <script src="scripts/directives/acknowledgments.js"></script>
     <script src="scripts/directives/staffMember.js"></script>
+    <script src="scripts/directives/mainNavigation.js"></script>
     <!-- endbuild -->
 </body>
 </html>
