--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/staff.js"></script>
     <script src="scripts/controllers/services.js"></script>
+    <script src="scripts/controllers/main.js"></script>
     <script src="scripts/directives/scaffold.js"></script>
     <script src="scripts/directives/acknowledgments.js"></script>
     <script src="scripts/directives/staffMember.js"></script>
