--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="bower_components/revolunet-angular-carousel/dist/angular-carousel.css">
+    <link rel="stylesheet" href="bower_components/bootstrap-sass/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 </head>
@@ -34,6 +34,8 @@
 
 
     <div data-scaffold></div>
+
+    <div ng-include="'views/template-cache.html'"></div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -67,7 +69,6 @@
 
     <!-- build:js scripts/plugins.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
-    <script src="bower_components/revolunet-angular-carousel/dist/angular-carousel.js"></script>
     <script src="bower_components/angular-masonry/angular-masonry.js"></script>
     <!-- endbuild -->
 
@@ -76,7 +77,7 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -85,6 +86,7 @@
     <script src="scripts/controllers/services.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/directives/scaffold.js"></script>
+    <script src="scripts/directives/banner.js"></script>
     <script src="scripts/directives/acknowledgments.js"></script>
     <script src="scripts/directives/staffMember.js"></script>
     <script src="scripts/directives/mainNavigation.js"></script>
