adding 'what we use' section, adding technologies directive.

--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
     <script src="scripts/directives/scaffold.js"></script>
     <script src="scripts/directives/banner.js"></script>
     <script src="scripts/directives/acknowledgments.js"></script>
+    <script src="scripts/directives/technologies.js"></script>
     <script src="scripts/directives/staffMember.js"></script>
     <script src="scripts/directives/mainNavigation.js"></script>
     <!-- endbuild -->
