--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <base href="/">
+
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="bower_components/bootstrap-sass/dist/css/bootstrap.css">
     <link rel="stylesheet" href="styles/main.css">
