--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/staff.js"></script>
     <script src="scripts/controllers/services.js"></script>
+    <script src="scripts/controllers/training.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/directives/scaffold.js"></script>
     <script src="scripts/directives/banner.js"></script>
